--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "react": "^16.13.1",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
