--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.13.1",
+    "react-mailchimp-form": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "validator": "^13.0.0"
