--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-clipboard.js": "^2.0.16",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.1",
     "react-mailchimp-form": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-share": "^4.1.0",
     "validator": "^13.0.0"
   },
   "scripts": {
