--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_API_BASE_URL=http://localhost:4000/api
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_sHoBPvw1cZxAffaPQTszyGgI
+REACT_APP_MEAL_PRICE=1
