--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@stripe/stripe-js": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "history": "^4.10.1",
+    "ismobilejs": "^1.1.1",
+    "lodash": "^4.17.15",
     "papaparse": "^5.2.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-clap-button": "^1.2.8",
     "react-clipboard.js": "^2.0.16",
-    "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-mailchimp-form": "^1.0.2",
