--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "react-ga": "^3.0.0",
     "react-lottie": "^1.2.3",
     "react-mailchimp-form": "^1.0.2",
-    "react-on-screen": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "validator": "^13.1.1"
   },
   "scripts": {
