--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.0.1",
     "antd": "^4.3.4",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.4",
+    "emoji-mart": "^3.0.0",
     "formik": "^2.1.4",
     "history": "^5.0.0",
     "ismobilejs": "^1.1.1",
