--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^5.0.0",
     "ismobilejs": "^1.1.1",
     "lodash": "^4.17.15",
+    "logrocket": "^1.0.14",
     "papaparse": "^5.2.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
